RESOLVED FIXED254076
MediaSource duration change algorithm incorrectly update the duration
https://bugs.webkit.org/show_bug.cgi?id=254076
Summary MediaSource duration change algorithm incorrectly update the duration
Jean-Yves Avenard [:jya]
Reported 2023-03-17 08:10:13 PDT
Per the duration change algorithm [1] ``` 4. If new duration is less than highest end time, then Note :This condition can occur because the coded frame removal algorithm preserves coded frames that start before the start of the removal range. 1. Update new duration to equal highest end time. Update duration to new duration. ``` However https://searchfox.org/wubkat/rev/0df98689c59d069de39d9ddb7e7fe403bf15070e/Source/WebCore/Modules/mediasource/MediaSource.cpp#520-525 we set the duration to the value originally passed. This causes the test `LayoutTests/media/media-source/media-source-play.html` when run in the GPU test, this wasn't an issue when the MockMSE runs in the content process as it always reads the duration from the parent MSE instead which is correct. [1] https://w3c.github.io/media-source/#dfn-duration-change
Attachments
Radar WebKit Bug Importer
Comment 1 2023-03-17 08:10:39 PDT
Jean-Yves Avenard [:jya]
Comment 2 2023-03-17 08:31:44 PDT
EWS
Comment 3 2023-03-18 16:53:11 PDT
Committed 261830@main (8575978fe5ef): <https://commits.webkit.org/261830@main> Reviewed commits have been landed. Closing PR #11654 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.