Cherry-pick 261830@main (8575978fe5ef). https://bugs.webkit.org/show_bug.cgi?id=254076

MediaSource duration change algorithm incorrectly update the duration
    https://bugs.webkit.org/show_bug.cgi?id=254076
    rdar://106858912

    Reviewed by Jer Noble.

    Will be covered by existing tests once the MockMediaSource will be
    runnin in the GPU process.

    * Source/WebCore/Modules/mediasource/MediaSource.cpp:
    (WebCore::MediaSource::setDurationInternal):
    * Source/WebCore/platform/mock/mediasource/MockMediaSourcePrivate.cpp:
    (WebCore::MockMediaSourcePrivate::durationChanged):

    Canonical link: https://commits.webkit.org/261830@main